# mixtape

./: .gitignore  .metadata  LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yml  copr.yml
android/app/: build.gradle.kts
assets/: mixtape.vrmanifest
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart  splash_screen.dart
lib/core/: providers.dart
lib/core/audio/: audio_file_cache.dart  audio_handler.dart  duration_correction.dart  eq_service.dart  player_service.dart  sleep_timer.dart
lib/core/database/: database.dart  database.g.dart
lib/core/discord/: discord_rpc_service.dart
lib/core/lyrics/: lyrics_service.dart
lib/core/models/: playlist.dart  track.dart
lib/core/plugins/: plugin_registry.dart  source_plugin.dart
lib/core/settings/: settings_provider.dart
lib/core/theme/: app_theme.dart
lib/features/home/: home_screen.dart
lib/features/player/: now_playing_screen.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
mixtape_vr/: Cargo.toml
mixtape_vr/src/: lib.rs  overlay.rs  vulkan.rs
packaging/: mixtape.spec
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+34 files in other folders)
